[tool.poetry]
name = "diffusion_classifiers"
version = "0.1.0"
authors = ["Rajat Rasal"]
readme = "README.md"
description = ""
packages = [
    { include = "datasets" },
    { include = "guided_diffusion" },
]

[tool.poetry.scripts]
train = "scripts.image_train:main"

[tool.poetry.dependencies]
python = "~3.12.0"
torch = "2.6.0"
torchvision = "0.21.0"
numpy = "1.26.3"
matplotlib = "3.8.2"
pandas = "2.2.3"
tqdm = "4.66.3"
scikit-learn = "1.6.1"
scikit-image = "0.25.1"
jupyter = "1.1.1"
seaborn = "0.13.2"
blobfile = "3.0.0"
mpi4py = "4.0.2"
# protobuf = "~3.20.0"
tensorboard = "2.18.0"

[tool.poetry.group.gpu]
optional = true

[tool.poetry.group.gpu.dependencies]
nvidia-nccl-cu12 = "2.21.5"
nvidia-cudnn-cu12 = "9.1.0.70"
nvidia-cuda-nvrtc-cu12 = "12.4.127"
nvidia-cuda-runtime-cu12 = "12.4.127"
nvidia-cuda-cupti-cu12 = "12.4.127"
nvidia-cublas-cu12 = "12.4.5.8"
nvidia-cufft-cu12 = "11.2.1.3"
nvidia-curand-cu12 = "10.3.5.147"
nvidia-cusolver-cu12 = "11.6.1.9"
nvidia-cusparse-cu12 = "12.3.1.170"
nvidia-nvtx-cu12 = "12.4.127"
nvidia-nvjitlink-cu12 = "12.4.127"
nvidia-cusparselt-cu12 = "0.6.2"
triton = "3.2.0"

[build-system]
requires = ["poetry-core==2.0.*"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
path = ".venv"

[tool.poetry.dev-dependencies]
ruff = "^0.0.287"

[tool.ruff]
# Configure ruff linter settings here
line-length = 88
select = ["E", "F", "W", "C90"]
ignore = ["E203", "E266", "E501", "W503"]

